Leverage unmodifiable collections.